--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "i18next": "^17.0.11",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "i18next": "^20.2.4",
+    "react": "^16.8",
+    "react-dom": "^16.8",
+    "react-i18next": "^11.8.15",
     "react-scripts": "2.1.1",
     "styled-components": "^4.1.1",
     "throttle-debounce": "^2.0.1"
